Replace the "worm excrement" bit with "most popular carbonated beverage"

--- a/trunk/doc/pubdesign/report.tex
+++ b/trunk/doc/pubdesign/report.tex
@@ -30,9 +30,8 @@ This paper presents a overview of the SLURM architecture and functionality.
 \section{Overview}
 
 SLURM\footnote{A tip of the hat to Matt Groening and creators of {\em Futurama},
-where Slurm is the highly addictive soda-like beverage made from worm
-excrement.} (Simple Linux Utility for Resource Management) 
-is a resource management 
+where Slurm is the most popular carbonated beverage in the universe.} 
+(Simple Linux Utility for Resource Management) is a resource management 
 system suitable for use on Linux clusters, large and small.  After 
 surveying\cite{Jette2002} resource managers available for Linux and finding 
 none that were simple, highly scalable, and portable to different cluster 
